# bitcoin

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  flake.nix  vcpkg.json
.github/: ci-test-each-commit-exec.py  ci-windows-cross.py  ci-windows.py
.github/ISSUE_TEMPLATE/: good_first_issue.yml
.github/workflows/: ci.yml
contrib/: README.md
contrib/openrpc-demo/: .gitignore  Cargo.toml
contrib/openrpc-demo/src/: codegen.rs  main.rs  openrpc.rs
depends/: Makefile  README.md  toolchain.cmake.in
doc/: INSTALL_linux.md  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  dependencies.md  developer-notes.md  files.md  multiprocess.md  productivity.md  release-notes-empty-template.md  release-process.md  translation_strings_policy.md
share/: setup.nsi.in
src/: CMakeLists.txt  addrman.h  base58.cpp  bitcoin-cli.cpp  bitcoin.cpp  bitcoind.cpp  block_validation.cpp  block_validation.h  blockencodings.cpp  blockfilter.cpp  blockfilter.h  chain.h  chainparamsseeds.h  chainstate.cpp  chainstate.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compressor.h  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  key.cpp  key.h  logging.cpp  logging.h  mempool_validation.cpp  mempool_validation.h  net.cpp  net.h  net_ibd_peer.cpp  net_ibd_peer.h  net_processing.cpp  net_processing.h  netaddress.cpp  (+18 more)
src/common/: args.cpp  (+1 more)
test/: CMakeLists.txt  README.md  config.ini.in
(+380 files in other folders)
