[package]
name = "openrpc-demo"
version = "0.1.0"
edition = "2024"
description = "Generate a type-safe Rust client from Bitcoin Core's getopenrpcinfo OpenRPC document"

[dependencies]
anyhow    = "1"
base64    = "0.22"
clap      = { version = "4", features = ["derive"] }
heck      = "0.5"
indexmap  = "2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
ureq      = { version = "2", features = ["json"] }
